add get shop pointticket histories
